2011-01-24  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheckdump.pl: Do not quit the clerk if it is not defined

2011-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Fix driver doing nothing if taper crash early.

2011-01-20  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amservice.8.xml: typo, </programlisting> must be at
	  the beginning of a line.

2011-01-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c: Do not report error if a dle is listed twice
	  in argument list.
	* installcheck/amadmin.pl: Test it.

2011-01-14  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/amndma_tape_simulator.c: Use full_read.
	* ndmp-src/ndma_tape.c: Use ndmchan_n_avail_record to guarantee space
	  for a record.
	* ndmp-src/ndml_chan.c (ndmchan_n_avail_record): New function.
	* ndmp-src/ndmlib.h  (ndmchan_n_avail_record): New prototype.

2011-01-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Change message of "timeout waiting for REP" to
	  "Some estimate timeout on %s, using server estimate if possible".

2011-01-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Xfer.pod: new offset and size arguments of xfer->start.
	* perl/Amanda/Xfer.swg: Add xfer_element_set_size.

2011-01-04  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/xfer-source-recovery.c: Never send more than the number
	  of bytes requested.
	* perl/Amanda/Xfer.swg (xfer_start): New offset and size arguments.
	* xfer-src/xfer-element.c: Add set_size method.
	* xfer-src/xfer-element.h (XferElement): Add size field.
	* xfer-src/xfer-test.c: Add offset=0 and size=0 to xfer_start call.
	* xfer-src/xfer.c (xfer_start): Add offset and size arguments. Call
	  xfer_element_set_size for the first element if size is set.
	* xfer-src/xfer.h (xfer_start): New prototype.
	* server-src/amfetchdump.pl, server-src/amidxtaped.pl,
	  server-src/amvault.pl: Call xfer->start() with offset and size